marekpisl/style.css
html {
    height: 100%;
}

body {
    background: linear-gradient(#fffcf5 90%, rgba(0, 0, 0, 0.3));
    margin: 0;
    padding: 0;
    font-family: "Barlow Condensed", sans-serif;
    overflow: hidden;
}

#flowers {
    position: absolute;
    width: 375px;
    left: 0;
    top: 0;
}

#navbar {
    font-size: 30pt;
    font-weight: 500;
    position: relative;
    margin: 0 auto;
    top: 90px;
    bottom: 60px;
    width: 1170px;
    height: 70px;
}

/* Marek Pišl */
#navbar span:nth-child(1) {
    letter-spacing: 0.02em;
}

/* email */
#navbar img:nth-child(3) {
    position: absolute;
    right: 117px;
    top: 20px;
}

/* vita */
#navbar span:nth-child(4) {
    position: absolute;
    right: 0;
    font-weight: 400;
    vertical-align: middle;
}

/* animated leaves */
#navbar img:nth-child(2) {
    position: relative;
    bottom: 20px;
    animation: 2s cubic-bezier(0, 0, 1, -0.5) 0s 1 fadein;
}

@keyframes fadein {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

#tiles {
    position: relative;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
    top: 120px;
    width: 1170px;
    height: 744px;
}

.tile {
    width: 370px;
    height: 228px;
}

#tiles img {
    max-width: 100%;
    max-height: 100%;
}

.title {
    background-color: rgba(0, 0, 0, 0.75);
    height: 40px;
    position: relative;
    bottom: 42px;
    text-align: center;
    font-size: 16pt;
}

.title span {
    font-weight: 500;
    color: #fffcf5;
    vertical-align: sub;
    letter-spacing: 0.03em;
}

